code/compiler/test/analysis/diagnostics_input_tests/semi_local_access.c
int y;

int foo(void);

int main(void) {
    int x = 5;
    int* b;
    if (foo()) {
        b = &x;
    } else {
        b = &y;
    }

    *b = 42;
    *b = *b + 1;
    (*b)++;
}
